--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <h1> Não sou o cara </h1>
-<h2> Você já se certificou disso <span id="cont"></span> ></h2>
+<h2> Você já se certificou disso <span id="cont"></span></h2>
 
 <script>
-   window.alert("ssd");
    let cnt = localStorage.getItem("contador");
-   if (!cnt) cnt = 1
-   document.getElementById("cont").innerHTML = cnt; 
+   console.log(cnt);
+   if (!cnt) cnt = 0
+   cnt = Number(cnt) + 1
+   document.getElementById("cont").innerHTML = cnt + (cnt == 1 ? " vez" : " vezes"); 
    localStorage.setItem('contador', cnt);
 </script>
